// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataState - with local clothesData Action: ADD_ITEMS / Use-case: loadItem -- successfully adds multiple items to the store 1`] = `
Object {
  "10001": ItemData {
    "amputationData": null,
    "depthType": 1,
    "depths": Object {
      "1": 33000,
      "2": 3500,
      "7": 38000,
      "8": 37200,
      "9": 3510,
    },
    "description": "Nikki's favorite hairstyle. It shines wherever she goes!",
    "id": 10001,
    "loadedTime": 0,
    "name": "Nikki's Pinky",
    "position": Array [
      PositionData {
        "depth": 1,
        "height": null,
        "scale": null,
        "width": null,
        "x": -14,
        "y": 310,
        "z": 33000,
      },
      PositionData {
        "depth": 2,
        "height": null,
        "scale": null,
        "width": null,
        "x": -42.5,
        "y": 245.5,
        "z": 3500,
      },
      PositionData {
        "depth": 9,
        "height": null,
        "scale": null,
        "width": null,
        "x": -25,
        "y": 248.5,
        "z": 3510,
      },
    ],
    "subType": 1,
  },
  "30987": ItemData {
    "amputationData": Object {
      "10": false,
      "12": false,
      "2": false,
      "5": false,
      "9": true,
    },
    "depthType": 48,
    "depths": Object {
      "1": 36700,
      "12": 10190,
      "13": 10160,
      "14": 9880,
      "2": 27000,
      "3": 19000,
      "4": 5000,
      "5": 840,
    },
    "description": "He stands against the light and looks back at her. She saves the throb deeply into her heart.",
    "id": 30987,
    "loadedTime": 10000,
    "name": "Rose Heart",
    "position": Array [
      PositionData {
        "depth": 1,
        "height": null,
        "scale": 1,
        "width": null,
        "x": -27,
        "y": 200.5,
        "z": 36700,
      },
      PositionData {
        "depth": 2,
        "height": null,
        "scale": 1,
        "width": null,
        "x": -202,
        "y": -130,
        "z": 27000,
      },
      PositionData {
        "depth": 3,
        "height": null,
        "scale": 1,
        "width": null,
        "x": 101,
        "y": -119,
        "z": 19000,
      },
      PositionData {
        "depth": 4,
        "height": null,
        "scale": 1,
        "width": null,
        "x": -81,
        "y": -153,
        "z": 5000,
      },
      PositionData {
        "depth": 13,
        "height": null,
        "scale": 1,
        "width": null,
        "x": -88.5,
        "y": 245,
        "z": 10160,
      },
      PositionData {
        "depth": 14,
        "height": null,
        "scale": 1,
        "width": null,
        "x": 42.5,
        "y": 234.5,
        "z": 9880,
      },
      PositionData {
        "depth": 101,
        "height": null,
        "scale": 1,
        "width": null,
        "x": -30.5,
        "y": 242.5,
        "z": 36695,
      },
      PositionData {
        "depth": 201,
        "height": null,
        "scale": 1,
        "width": null,
        "x": -47.5,
        "y": 262,
        "z": 26995,
      },
      PositionData {
        "depth": 301,
        "height": null,
        "scale": 1,
        "width": null,
        "x": 124.5,
        "y": 139,
        "z": 18995,
      },
    ],
    "subType": 3,
  },
  "71927": ItemData {
    "amputationData": Object {
      "10": true,
      "12": false,
      "2": false,
      "5": true,
      "9": false,
    },
    "depthType": 16,
    "depths": Object {
      "1": 13750,
      "2": 13500,
      "3": 9000,
      "4": 840,
      "9": 10220,
    },
    "description": "Those old stories fade into dust and get blown away by the wind. Yi walks in the mortal world and listens.",
    "id": 71927,
    "loadedTime": 10000,
    "name": "Sparse Stars",
    "position": Array [
      PositionData {
        "depth": 1,
        "height": null,
        "scale": 1,
        "width": null,
        "x": -365.5,
        "y": -487,
        "z": 13750,
      },
      PositionData {
        "depth": 4,
        "height": null,
        "scale": 1,
        "width": null,
        "x": -672.5,
        "y": -357,
        "z": 840,
      },
    ],
    "subType": 8,
  },
}
`;

exports[`DataState - with local clothesData Action: ADD_ITEMS / Use-case: loadMultipleItems - 
        load multiple items successfully (no conflicts) 1`] = `
Object {
  "10001": ItemData {
    "amputationData": null,
    "depthType": 1,
    "depths": Object {
      "1": 33000,
      "2": 3500,
      "7": 38000,
      "8": 37200,
      "9": 3510,
    },
    "description": "Nikki's favorite hairstyle. It shines wherever she goes!",
    "id": 10001,
    "loadedTime": 0,
    "name": "Nikki's Pinky",
    "position": Array [
      PositionData {
        "depth": 1,
        "height": null,
        "scale": null,
        "width": null,
        "x": -14,
        "y": 310,
        "z": 33000,
      },
      PositionData {
        "depth": 2,
        "height": null,
        "scale": null,
        "width": null,
        "x": -42.5,
        "y": 245.5,
        "z": 3500,
      },
      PositionData {
        "depth": 9,
        "height": null,
        "scale": null,
        "width": null,
        "x": -25,
        "y": 248.5,
        "z": 3510,
      },
    ],
    "subType": 1,
  },
  "22008": ItemData {
    "amputationData": Object {
      "10": true,
      "12": true,
      "2": true,
      "5": false,
      "9": true,
    },
    "depthType": 41,
    "depths": Object {
      "1": 36600,
      "12": 10200,
      "13": 10170,
      "14": 9900,
      "2": 24000,
      "21": 24000,
      "22": 24000,
      "3": 18000,
      "4": 6000,
      "5": 850,
      "8": 27150,
      "9": 10220,
    },
    "description": "The sakura festival has come again. In the flower rain, she holds an umbrella, waiting for the one to come.",
    "id": 22008,
    "loadedTime": 10000,
    "name": "Sakura Dream",
    "position": Array [
      PositionData {
        "depth": 2,
        "height": null,
        "scale": 1,
        "width": null,
        "x": -32.5,
        "y": -164.5,
        "z": 24000,
      },
      PositionData {
        "depth": 901,
        "height": null,
        "scale": 1,
        "width": null,
        "x": -59.5,
        "y": 328,
        "z": 10215,
      },
    ],
    "subType": 2,
  },
  "30987": ItemData {
    "amputationData": Object {
      "10": false,
      "12": false,
      "2": false,
      "5": false,
      "9": true,
    },
    "depthType": 48,
    "depths": Object {
      "1": 36700,
      "12": 10190,
      "13": 10160,
      "14": 9880,
      "2": 27000,
      "3": 19000,
      "4": 5000,
      "5": 840,
    },
    "description": "He stands against the light and looks back at her. She saves the throb deeply into her heart.",
    "id": 30987,
    "loadedTime": 10000,
    "name": "Rose Heart",
    "position": Array [
      PositionData {
        "depth": 1,
        "height": null,
        "scale": 1,
        "width": null,
        "x": -27,
        "y": 200.5,
        "z": 36700,
      },
      PositionData {
        "depth": 2,
        "height": null,
        "scale": 1,
        "width": null,
        "x": -202,
        "y": -130,
        "z": 27000,
      },
      PositionData {
        "depth": 3,
        "height": null,
        "scale": 1,
        "width": null,
        "x": 101,
        "y": -119,
        "z": 19000,
      },
      PositionData {
        "depth": 4,
        "height": null,
        "scale": 1,
        "width": null,
        "x": -81,
        "y": -153,
        "z": 5000,
      },
      PositionData {
        "depth": 13,
        "height": null,
        "scale": 1,
        "width": null,
        "x": -88.5,
        "y": 245,
        "z": 10160,
      },
      PositionData {
        "depth": 14,
        "height": null,
        "scale": 1,
        "width": null,
        "x": 42.5,
        "y": 234.5,
        "z": 9880,
      },
      PositionData {
        "depth": 101,
        "height": null,
        "scale": 1,
        "width": null,
        "x": -30.5,
        "y": 242.5,
        "z": 36695,
      },
      PositionData {
        "depth": 201,
        "height": null,
        "scale": 1,
        "width": null,
        "x": -47.5,
        "y": 262,
        "z": 26995,
      },
      PositionData {
        "depth": 301,
        "height": null,
        "scale": 1,
        "width": null,
        "x": 124.5,
        "y": 139,
        "z": 18995,
      },
    ],
    "subType": 3,
  },
}
`;

exports[`DataState - with local clothesData Action: ADD_ITEMS / Use-case: loadMultipleItems - handle clothes lookup returning blank data 1`] = `
Object {
  "itemsData": Object {
    "10001": ItemData {
      "amputationData": null,
      "depthType": 1,
      "depths": Object {
        "1": 33000,
        "2": 3500,
        "7": 38000,
        "8": 37200,
        "9": 3510,
      },
      "description": "Nikki's favorite hairstyle. It shines wherever she goes!",
      "id": 10001,
      "loadedTime": 0,
      "name": "Nikki's Pinky",
      "position": Array [
        PositionData {
          "depth": 1,
          "height": null,
          "scale": null,
          "width": null,
          "x": -14,
          "y": 310,
          "z": 33000,
        },
        PositionData {
          "depth": 2,
          "height": null,
          "scale": null,
          "width": null,
          "x": -42.5,
          "y": 245.5,
          "z": 3500,
        },
        PositionData {
          "depth": 9,
          "height": null,
          "scale": null,
          "width": null,
          "x": -25,
          "y": 248.5,
          "z": 3510,
        },
      ],
      "subType": 1,
    },
    "22008": ItemData {
      "amputationData": Object {
        "10": true,
        "12": true,
        "2": true,
        "5": false,
        "9": true,
      },
      "depthType": 41,
      "depths": Object {
        "1": 36600,
        "12": 10200,
        "13": 10170,
        "14": 9900,
        "2": 24000,
        "21": 24000,
        "22": 24000,
        "3": 18000,
        "4": 6000,
        "5": 850,
        "8": 27150,
        "9": 10220,
      },
      "description": "The sakura festival has come again. In the flower rain, she holds an umbrella, waiting for the one to come.",
      "id": 22008,
      "loadedTime": 10000,
      "name": "Sakura Dream",
      "position": Array [
        PositionData {
          "depth": 2,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -32.5,
          "y": -164.5,
          "z": 24000,
        },
        PositionData {
          "depth": 901,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -59.5,
          "y": 328,
          "z": 10215,
        },
      ],
      "subType": 2,
    },
    "30987": ItemData {
      "amputationData": Object {
        "10": false,
        "12": false,
        "2": false,
        "5": false,
        "9": true,
      },
      "depthType": 48,
      "depths": Object {
        "1": 36700,
        "12": 10190,
        "13": 10160,
        "14": 9880,
        "2": 27000,
        "3": 19000,
        "4": 5000,
        "5": 840,
      },
      "description": "He stands against the light and looks back at her. She saves the throb deeply into her heart.",
      "id": 30987,
      "loadedTime": 10000,
      "name": "Rose Heart",
      "position": Array [
        PositionData {
          "depth": 1,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -27,
          "y": 200.5,
          "z": 36700,
        },
        PositionData {
          "depth": 2,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -202,
          "y": -130,
          "z": 27000,
        },
        PositionData {
          "depth": 3,
          "height": null,
          "scale": 1,
          "width": null,
          "x": 101,
          "y": -119,
          "z": 19000,
        },
        PositionData {
          "depth": 4,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -81,
          "y": -153,
          "z": 5000,
        },
        PositionData {
          "depth": 13,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -88.5,
          "y": 245,
          "z": 10160,
        },
        PositionData {
          "depth": 14,
          "height": null,
          "scale": 1,
          "width": null,
          "x": 42.5,
          "y": 234.5,
          "z": 9880,
        },
        PositionData {
          "depth": 101,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -30.5,
          "y": 242.5,
          "z": 36695,
        },
        PositionData {
          "depth": 201,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -47.5,
          "y": 262,
          "z": 26995,
        },
        PositionData {
          "depth": 301,
          "height": null,
          "scale": 1,
          "width": null,
          "x": 124.5,
          "y": 139,
          "z": 18995,
        },
      ],
      "subType": 3,
    },
  },
  "loading": false,
}
`;

exports[`DataState - with local clothesData Action: ADD_ITEMS / Use-case: loadMultipleItems - handle clothes lookup returning blank data 2`] = `
Object {
  "history": Array [
    Character {
      "amputations": Object {
        "10": Array [],
        "12": Array [],
        "2": Array [],
        "4": Array [],
        "5": Array [],
        "9": Array [],
      },
      "clothes": Object {
        "1": 10001,
      },
      "visibleParts": Set {
        2,
        4,
        5,
        9,
        10,
        11,
        12,
      },
    },
    Character {
      "amputations": Object {
        "10": Array [
          22008,
        ],
        "12": Array [
          22008,
        ],
        "2": Array [
          22008,
        ],
        "4": Array [
          22008,
        ],
        "5": Array [
          22008,
        ],
        "9": Array [
          30987,
          22008,
        ],
      },
      "clothes": Object {
        "1": 10001,
        "2": 22008,
        "3": 30987,
      },
      "visibleParts": Set {
        11,
      },
    },
  ],
  "step": 1,
}
`;

exports[`DataState - with local clothesData Action: ADD_ITEMS / Use-case: loadMultipleItems - if the input has just one item, load it anyway 1`] = `
Object {
  "10001": ItemData {
    "amputationData": null,
    "depthType": 1,
    "depths": Object {
      "1": 33000,
      "2": 3500,
      "7": 38000,
      "8": 37200,
      "9": 3510,
    },
    "description": "Nikki's favorite hairstyle. It shines wherever she goes!",
    "id": 10001,
    "loadedTime": 0,
    "name": "Nikki's Pinky",
    "position": Array [
      PositionData {
        "depth": 1,
        "height": null,
        "scale": null,
        "width": null,
        "x": -14,
        "y": 310,
        "z": 33000,
      },
      PositionData {
        "depth": 2,
        "height": null,
        "scale": null,
        "width": null,
        "x": -42.5,
        "y": 245.5,
        "z": 3500,
      },
      PositionData {
        "depth": 9,
        "height": null,
        "scale": null,
        "width": null,
        "x": -25,
        "y": 248.5,
        "z": 3510,
      },
    ],
    "subType": 1,
  },
  "22008": ItemData {
    "amputationData": Object {
      "10": true,
      "12": true,
      "2": true,
      "5": false,
      "9": true,
    },
    "depthType": 41,
    "depths": Object {
      "1": 36600,
      "12": 10200,
      "13": 10170,
      "14": 9900,
      "2": 24000,
      "21": 24000,
      "22": 24000,
      "3": 18000,
      "4": 6000,
      "5": 850,
      "8": 27150,
      "9": 10220,
    },
    "description": "The sakura festival has come again. In the flower rain, she holds an umbrella, waiting for the one to come.",
    "id": 22008,
    "loadedTime": 10000,
    "name": "Sakura Dream",
    "position": Array [
      PositionData {
        "depth": 2,
        "height": null,
        "scale": 1,
        "width": null,
        "x": -32.5,
        "y": -164.5,
        "z": 24000,
      },
      PositionData {
        "depth": 901,
        "height": null,
        "scale": 1,
        "width": null,
        "x": -59.5,
        "y": 328,
        "z": 10215,
      },
    ],
    "subType": 2,
  },
}
`;

exports[`DataState - with local clothesData Action: ADD_ITEMS / Use-case: loadMultipleItems - load multiple items successfully (one conflict) 1`] = `
Object {
  "10001": ItemData {
    "amputationData": null,
    "depthType": 1,
    "depths": Object {
      "1": 33000,
      "2": 3500,
      "7": 38000,
      "8": 37200,
      "9": 3510,
    },
    "description": "Nikki's favorite hairstyle. It shines wherever she goes!",
    "id": 10001,
    "loadedTime": 0,
    "name": "Nikki's Pinky",
    "position": Array [
      PositionData {
        "depth": 1,
        "height": null,
        "scale": null,
        "width": null,
        "x": -14,
        "y": 310,
        "z": 33000,
      },
      PositionData {
        "depth": 2,
        "height": null,
        "scale": null,
        "width": null,
        "x": -42.5,
        "y": 245.5,
        "z": 3500,
      },
      PositionData {
        "depth": 9,
        "height": null,
        "scale": null,
        "width": null,
        "x": -25,
        "y": 248.5,
        "z": 3510,
      },
    ],
    "subType": 1,
  },
  "10007": ItemData {
    "amputationData": null,
    "depthType": 1,
    "depths": Object {
      "1": 33000,
      "2": 3500,
      "7": 38000,
      "8": 37200,
      "9": 3510,
    },
    "description": "A gentle, thoughtful nobleman is not supposed to be the silent background forever.",
    "id": 10007,
    "loadedTime": 10000,
    "name": "Elegant Nobleman",
    "position": Array [
      PositionData {
        "depth": 1,
        "height": null,
        "scale": null,
        "width": null,
        "x": -21.5,
        "y": 426,
        "z": 33000,
      },
    ],
    "subType": 1,
  },
  "30987": ItemData {
    "amputationData": Object {
      "10": false,
      "12": false,
      "2": false,
      "5": false,
      "9": true,
    },
    "depthType": 48,
    "depths": Object {
      "1": 36700,
      "12": 10190,
      "13": 10160,
      "14": 9880,
      "2": 27000,
      "3": 19000,
      "4": 5000,
      "5": 840,
    },
    "description": "He stands against the light and looks back at her. She saves the throb deeply into her heart.",
    "id": 30987,
    "loadedTime": 10000,
    "name": "Rose Heart",
    "position": Array [
      PositionData {
        "depth": 1,
        "height": null,
        "scale": 1,
        "width": null,
        "x": -27,
        "y": 200.5,
        "z": 36700,
      },
      PositionData {
        "depth": 2,
        "height": null,
        "scale": 1,
        "width": null,
        "x": -202,
        "y": -130,
        "z": 27000,
      },
      PositionData {
        "depth": 3,
        "height": null,
        "scale": 1,
        "width": null,
        "x": 101,
        "y": -119,
        "z": 19000,
      },
      PositionData {
        "depth": 4,
        "height": null,
        "scale": 1,
        "width": null,
        "x": -81,
        "y": -153,
        "z": 5000,
      },
      PositionData {
        "depth": 13,
        "height": null,
        "scale": 1,
        "width": null,
        "x": -88.5,
        "y": 245,
        "z": 10160,
      },
      PositionData {
        "depth": 14,
        "height": null,
        "scale": 1,
        "width": null,
        "x": 42.5,
        "y": 234.5,
        "z": 9880,
      },
      PositionData {
        "depth": 101,
        "height": null,
        "scale": 1,
        "width": null,
        "x": -30.5,
        "y": 242.5,
        "z": 36695,
      },
      PositionData {
        "depth": 201,
        "height": null,
        "scale": 1,
        "width": null,
        "x": -47.5,
        "y": 262,
        "z": 26995,
      },
      PositionData {
        "depth": 301,
        "height": null,
        "scale": 1,
        "width": null,
        "x": 124.5,
        "y": 139,
        "z": 18995,
      },
    ],
    "subType": 3,
  },
}
`;

exports[`DataState - with local clothesData Action: ADD_ITEMS / Use-case: loadMultipleItems - use item data if already loaded 1`] = `
Object {
  "itemsData": Object {
    "10001": ItemData {
      "amputationData": null,
      "depthType": 1,
      "depths": Object {
        "1": 33000,
        "2": 3500,
        "7": 38000,
        "8": 37200,
        "9": 3510,
      },
      "description": "Nikki's favorite hairstyle. It shines wherever she goes!",
      "id": 10001,
      "loadedTime": 0,
      "name": "Nikki's Pinky",
      "position": Array [
        PositionData {
          "depth": 1,
          "height": null,
          "scale": null,
          "width": null,
          "x": -14,
          "y": 310,
          "z": 33000,
        },
        PositionData {
          "depth": 2,
          "height": null,
          "scale": null,
          "width": null,
          "x": -42.5,
          "y": 245.5,
          "z": 3500,
        },
        PositionData {
          "depth": 9,
          "height": null,
          "scale": null,
          "width": null,
          "x": -25,
          "y": 248.5,
          "z": 3510,
        },
      ],
      "subType": 1,
    },
    "10007": ItemData {
      "amputationData": null,
      "depthType": 1,
      "depths": Object {
        "1": 33000,
        "2": 3500,
        "7": 38000,
        "8": 37200,
        "9": 3510,
      },
      "description": "A gentle, thoughtful nobleman is not supposed to be the silent background forever.",
      "id": 10007,
      "loadedTime": 10000,
      "name": "Elegant Nobleman",
      "position": Array [
        PositionData {
          "depth": 1,
          "height": null,
          "scale": null,
          "width": null,
          "x": -21.5,
          "y": 426,
          "z": 33000,
        },
      ],
      "subType": 1,
    },
    "22008": ItemData {
      "amputationData": Object {
        "10": true,
        "12": true,
        "2": true,
        "5": false,
        "9": true,
      },
      "depthType": 41,
      "depths": Object {
        "1": 36600,
        "12": 10200,
        "13": 10170,
        "14": 9900,
        "2": 24000,
        "21": 24000,
        "22": 24000,
        "3": 18000,
        "4": 6000,
        "5": 850,
        "8": 27150,
        "9": 10220,
      },
      "description": "The sakura festival has come again. In the flower rain, she holds an umbrella, waiting for the one to come.",
      "id": 22008,
      "loadedTime": 10000,
      "name": "Sakura Dream",
      "position": Array [
        PositionData {
          "depth": 2,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -32.5,
          "y": -164.5,
          "z": 24000,
        },
        PositionData {
          "depth": 901,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -59.5,
          "y": 328,
          "z": 10215,
        },
      ],
      "subType": 2,
    },
    "30987": ItemData {
      "amputationData": Object {
        "10": false,
        "12": false,
        "2": false,
        "5": false,
        "9": true,
      },
      "depthType": 48,
      "depths": Object {
        "1": 36700,
        "12": 10190,
        "13": 10160,
        "14": 9880,
        "2": 27000,
        "3": 19000,
        "4": 5000,
        "5": 840,
      },
      "description": "He stands against the light and looks back at her. She saves the throb deeply into her heart.",
      "id": 30987,
      "loadedTime": 10000,
      "name": "Rose Heart",
      "position": Array [
        PositionData {
          "depth": 1,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -27,
          "y": 200.5,
          "z": 36700,
        },
        PositionData {
          "depth": 2,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -202,
          "y": -130,
          "z": 27000,
        },
        PositionData {
          "depth": 3,
          "height": null,
          "scale": 1,
          "width": null,
          "x": 101,
          "y": -119,
          "z": 19000,
        },
        PositionData {
          "depth": 4,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -81,
          "y": -153,
          "z": 5000,
        },
        PositionData {
          "depth": 13,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -88.5,
          "y": 245,
          "z": 10160,
        },
        PositionData {
          "depth": 14,
          "height": null,
          "scale": 1,
          "width": null,
          "x": 42.5,
          "y": 234.5,
          "z": 9880,
        },
        PositionData {
          "depth": 101,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -30.5,
          "y": 242.5,
          "z": 36695,
        },
        PositionData {
          "depth": 201,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -47.5,
          "y": 262,
          "z": 26995,
        },
        PositionData {
          "depth": 301,
          "height": null,
          "scale": 1,
          "width": null,
          "x": 124.5,
          "y": 139,
          "z": 18995,
        },
      ],
      "subType": 3,
    },
  },
  "loading": false,
}
`;

exports[`DataState - with local clothesData Action: ADD_ITEMS / Use-case: loadMultipleItems - use item data if already loaded 2`] = `
Object {
  "history": Array [
    Character {
      "amputations": Object {
        "10": Array [],
        "12": Array [],
        "2": Array [],
        "4": Array [],
        "5": Array [],
        "9": Array [],
      },
      "clothes": Object {
        "1": 10001,
      },
      "visibleParts": Set {
        2,
        4,
        5,
        9,
        10,
        11,
        12,
      },
    },
    Character {
      "amputations": Object {
        "10": Array [
          22008,
        ],
        "12": Array [
          22008,
        ],
        "2": Array [
          22008,
        ],
        "4": Array [
          22008,
        ],
        "5": Array [
          22008,
        ],
        "9": Array [
          30987,
          22008,
        ],
      },
      "clothes": Object {
        "1": 10007,
        "2": 22008,
        "3": 30987,
      },
      "visibleParts": Set {
        11,
      },
    },
  ],
  "step": 1,
}
`;

exports[`DataState - with local clothesData Action: ADD_ITEMS / Use-case: loadMultipleItems - use item data if already loaded 3`] = `
Object {
  "itemsData": Object {
    "10001": ItemData {
      "amputationData": null,
      "depthType": 1,
      "depths": Object {
        "1": 33000,
        "2": 3500,
        "7": 38000,
        "8": 37200,
        "9": 3510,
      },
      "description": "Nikki's favorite hairstyle. It shines wherever she goes!",
      "id": 10001,
      "loadedTime": 0,
      "name": "Nikki's Pinky",
      "position": Array [
        PositionData {
          "depth": 1,
          "height": null,
          "scale": null,
          "width": null,
          "x": -14,
          "y": 310,
          "z": 33000,
        },
        PositionData {
          "depth": 2,
          "height": null,
          "scale": null,
          "width": null,
          "x": -42.5,
          "y": 245.5,
          "z": 3500,
        },
        PositionData {
          "depth": 9,
          "height": null,
          "scale": null,
          "width": null,
          "x": -25,
          "y": 248.5,
          "z": 3510,
        },
      ],
      "subType": 1,
    },
    "10007": ItemData {
      "amputationData": null,
      "depthType": 1,
      "depths": Object {
        "1": 33000,
        "2": 3500,
        "7": 38000,
        "8": 37200,
        "9": 3510,
      },
      "description": "A gentle, thoughtful nobleman is not supposed to be the silent background forever.",
      "id": 10007,
      "loadedTime": 10000,
      "name": "Elegant Nobleman",
      "position": Array [
        PositionData {
          "depth": 1,
          "height": null,
          "scale": null,
          "width": null,
          "x": -21.5,
          "y": 426,
          "z": 33000,
        },
      ],
      "subType": 1,
    },
    "12363": ItemData {
      "amputationData": null,
      "depthType": 1,
      "depths": Object {
        "1": 33000,
        "2": 3500,
        "7": 38000,
        "8": 37200,
        "9": 3510,
      },
      "description": "As the night falls, the grand theatre is all empty. The touching music behind the curtain feels strangely beautiful.",
      "id": 12363,
      "loadedTime": 10000,
      "name": "Dreamland Snow",
      "position": Array [
        PositionData {
          "depth": 1,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -25,
          "y": 378,
          "z": 33000,
        },
        PositionData {
          "depth": 2,
          "height": null,
          "scale": 1,
          "width": null,
          "x": 254.5,
          "y": 45.5,
          "z": 3500,
        },
        PositionData {
          "depth": 9,
          "height": null,
          "scale": 1,
          "width": null,
          "x": 81,
          "y": 55.5,
          "z": 3510,
        },
      ],
      "subType": 1,
    },
    "21305": ItemData {
      "amputationData": null,
      "depthType": 3,
      "depths": Object {
        "1": 24000,
        "2": 17000,
        "3": 6000,
        "4": 5070,
        "6": 25600,
        "9": 10220,
      },
      "description": "In the pseudonym of Zisang, Bai Jinjin handed in a special white and red Apple style dress this time.",
      "id": 21305,
      "loadedTime": 10000,
      "name": "Hiding in the World·Red",
      "position": Array [
        PositionData {
          "depth": 1,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -7.5,
          "y": 120,
          "z": 24000,
        },
      ],
      "subType": 2,
    },
    "22008": ItemData {
      "amputationData": Object {
        "10": true,
        "12": true,
        "2": true,
        "5": false,
        "9": true,
      },
      "depthType": 41,
      "depths": Object {
        "1": 36600,
        "12": 10200,
        "13": 10170,
        "14": 9900,
        "2": 24000,
        "21": 24000,
        "22": 24000,
        "3": 18000,
        "4": 6000,
        "5": 850,
        "8": 27150,
        "9": 10220,
      },
      "description": "The sakura festival has come again. In the flower rain, she holds an umbrella, waiting for the one to come.",
      "id": 22008,
      "loadedTime": 10000,
      "name": "Sakura Dream",
      "position": Array [
        PositionData {
          "depth": 2,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -32.5,
          "y": -164.5,
          "z": 24000,
        },
        PositionData {
          "depth": 901,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -59.5,
          "y": 328,
          "z": 10215,
        },
      ],
      "subType": 2,
    },
    "30987": ItemData {
      "amputationData": Object {
        "10": false,
        "12": false,
        "2": false,
        "5": false,
        "9": true,
      },
      "depthType": 48,
      "depths": Object {
        "1": 36700,
        "12": 10190,
        "13": 10160,
        "14": 9880,
        "2": 27000,
        "3": 19000,
        "4": 5000,
        "5": 840,
      },
      "description": "He stands against the light and looks back at her. She saves the throb deeply into her heart.",
      "id": 30987,
      "loadedTime": 10000,
      "name": "Rose Heart",
      "position": Array [
        PositionData {
          "depth": 1,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -27,
          "y": 200.5,
          "z": 36700,
        },
        PositionData {
          "depth": 2,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -202,
          "y": -130,
          "z": 27000,
        },
        PositionData {
          "depth": 3,
          "height": null,
          "scale": 1,
          "width": null,
          "x": 101,
          "y": -119,
          "z": 19000,
        },
        PositionData {
          "depth": 4,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -81,
          "y": -153,
          "z": 5000,
        },
        PositionData {
          "depth": 13,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -88.5,
          "y": 245,
          "z": 10160,
        },
        PositionData {
          "depth": 14,
          "height": null,
          "scale": 1,
          "width": null,
          "x": 42.5,
          "y": 234.5,
          "z": 9880,
        },
        PositionData {
          "depth": 101,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -30.5,
          "y": 242.5,
          "z": 36695,
        },
        PositionData {
          "depth": 201,
          "height": null,
          "scale": 1,
          "width": null,
          "x": -47.5,
          "y": 262,
          "z": 26995,
        },
        PositionData {
          "depth": 301,
          "height": null,
          "scale": 1,
          "width": null,
          "x": 124.5,
          "y": 139,
          "z": 18995,
        },
      ],
      "subType": 3,
    },
  },
  "loading": false,
}
`;

exports[`DataState - with local clothesData Action: ADD_ITEMS / Use-case: loadMultipleItems - use item data if already loaded 4`] = `
Object {
  "history": Array [
    Character {
      "amputations": Object {
        "10": Array [],
        "12": Array [],
        "2": Array [],
        "4": Array [],
        "5": Array [],
        "9": Array [],
      },
      "clothes": Object {
        "1": 10001,
      },
      "visibleParts": Set {
        2,
        4,
        5,
        9,
        10,
        11,
        12,
      },
    },
    Character {
      "amputations": Object {
        "10": Array [
          22008,
        ],
        "12": Array [
          22008,
        ],
        "2": Array [
          22008,
        ],
        "4": Array [
          22008,
        ],
        "5": Array [
          22008,
        ],
        "9": Array [
          30987,
          22008,
        ],
      },
      "clothes": Object {
        "1": 10007,
        "2": 22008,
        "3": 30987,
      },
      "visibleParts": Set {
        11,
      },
    },
    Character {
      "amputations": Object {
        "10": Array [],
        "12": Array [],
        "2": Array [],
        "4": Array [
          21305,
        ],
        "5": Array [
          21305,
        ],
        "9": Array [
          30987,
        ],
      },
      "clothes": Object {
        "1": 12363,
        "2": 21305,
        "3": 30987,
      },
      "visibleParts": Set {
        2,
        10,
        11,
        12,
      },
    },
  ],
  "step": 2,
}
`;

exports[`ItemData Successfully deserializes ItemData: complex hair 1`] = `
ItemData {
  "amputationData": null,
  "depthType": 1,
  "depths": Object {
    "1": 33000,
    "2": 3500,
    "7": 38000,
    "8": 37200,
    "9": 3510,
  },
  "description": "As the night falls, the grand theatre is all empty. The touching music behind the curtain feels strangely beautiful.",
  "id": 12363,
  "loadedTime": 10000,
  "name": "Dreamland Snow",
  "position": Array [
    PositionData {
      "depth": 1,
      "height": null,
      "scale": 1,
      "width": null,
      "x": -25,
      "y": 378,
      "z": 33000,
    },
    PositionData {
      "depth": 2,
      "height": null,
      "scale": 1,
      "width": null,
      "x": 254.5,
      "y": 45.5,
      "z": 3500,
    },
    PositionData {
      "depth": 9,
      "height": null,
      "scale": 1,
      "width": null,
      "x": 81,
      "y": 55.5,
      "z": 3510,
    },
  ],
  "subType": 1,
}
`;

exports[`ItemData Successfully deserializes ItemData: deer spirit 1`] = `
ItemData {
  "amputationData": null,
  "depthType": 61,
  "depths": Object {
    "1": 60000,
  },
  "description": "The season may change, but flowers will bloom if there is spring in your heart. The boy never forgets this place.",
  "id": 880048,
  "loadedTime": 10000,
  "name": "Deer and Cliff",
  "position": Array [
    PositionData {
      "depth": 1,
      "height": null,
      "scale": null,
      "width": null,
      "x": 124.5,
      "y": 51,
      "z": 60000,
    },
  ],
  "subType": 34,
}
`;

exports[`ItemData Successfully deserializes ItemData: motorcycle spririt 1`] = `
ItemData {
  "amputationData": null,
  "depthType": 61,
  "depths": Object {
    "1": 60000,
  },
  "description": "At 24, Louie wore the white robe of Nameless Order and held the knight spear, leaving Bluebird and the past behind",
  "id": 880092,
  "loadedTime": 10000,
  "name": "Dark Night Motor",
  "position": Array [
    PositionData {
      "depth": 1,
      "height": null,
      "scale": null,
      "width": null,
      "x": 154,
      "y": -200,
      "z": 60000,
    },
  ],
  "subType": 34,
}
`;

exports[`ItemData Successfully deserializes ItemData: posed coat 1`] = `
ItemData {
  "amputationData": Object {
    "10": false,
    "12": false,
    "2": false,
    "5": false,
    "9": true,
  },
  "depthType": 48,
  "depths": Object {
    "1": 36700,
    "12": 10190,
    "13": 10160,
    "14": 9880,
    "2": 27000,
    "3": 19000,
    "4": 5000,
    "5": 840,
  },
  "description": "He stands against the light and looks back at her. She saves the throb deeply into her heart.",
  "id": 30987,
  "loadedTime": 10000,
  "name": "Rose Heart",
  "position": Array [
    PositionData {
      "depth": 1,
      "height": null,
      "scale": 1,
      "width": null,
      "x": -27,
      "y": 200.5,
      "z": 36700,
    },
    PositionData {
      "depth": 2,
      "height": null,
      "scale": 1,
      "width": null,
      "x": -202,
      "y": -130,
      "z": 27000,
    },
    PositionData {
      "depth": 3,
      "height": null,
      "scale": 1,
      "width": null,
      "x": 101,
      "y": -119,
      "z": 19000,
    },
    PositionData {
      "depth": 4,
      "height": null,
      "scale": 1,
      "width": null,
      "x": -81,
      "y": -153,
      "z": 5000,
    },
    PositionData {
      "depth": 13,
      "height": null,
      "scale": 1,
      "width": null,
      "x": -88.5,
      "y": 245,
      "z": 10160,
    },
    PositionData {
      "depth": 14,
      "height": null,
      "scale": 1,
      "width": null,
      "x": 42.5,
      "y": 234.5,
      "z": 9880,
    },
    PositionData {
      "depth": 101,
      "height": null,
      "scale": 1,
      "width": null,
      "x": -30.5,
      "y": 242.5,
      "z": 36695,
    },
    PositionData {
      "depth": 201,
      "height": null,
      "scale": 1,
      "width": null,
      "x": -47.5,
      "y": 262,
      "z": 26995,
    },
    PositionData {
      "depth": 301,
      "height": null,
      "scale": 1,
      "width": null,
      "x": 124.5,
      "y": 139,
      "z": 18995,
    },
  ],
  "subType": 3,
}
`;

exports[`ItemData Successfully deserializes ItemData: posed dress 1`] = `
ItemData {
  "amputationData": Object {
    "10": true,
    "12": true,
    "2": true,
    "5": false,
    "9": true,
  },
  "depthType": 41,
  "depths": Object {
    "1": 36600,
    "12": 10200,
    "13": 10170,
    "14": 9900,
    "2": 24000,
    "21": 24000,
    "22": 24000,
    "3": 18000,
    "4": 6000,
    "5": 850,
    "8": 27150,
    "9": 10220,
  },
  "description": "The sakura festival has come again. In the flower rain, she holds an umbrella, waiting for the one to come.",
  "id": 22008,
  "loadedTime": 10000,
  "name": "Sakura Dream",
  "position": Array [
    PositionData {
      "depth": 2,
      "height": null,
      "scale": 1,
      "width": null,
      "x": -32.5,
      "y": -164.5,
      "z": 24000,
    },
    PositionData {
      "depth": 901,
      "height": null,
      "scale": 1,
      "width": null,
      "x": -59.5,
      "y": 328,
      "z": 10215,
    },
  ],
  "subType": 2,
}
`;

exports[`ItemData Successfully deserializes ItemData: posed shoes 1`] = `
ItemData {
  "amputationData": Object {
    "10": true,
    "12": false,
    "2": false,
    "5": true,
    "9": false,
  },
  "depthType": 16,
  "depths": Object {
    "1": 13750,
    "2": 13500,
    "3": 9000,
    "4": 840,
    "9": 10220,
  },
  "description": "Those old stories fade into dust and get blown away by the wind. Yi walks in the mortal world and listens.",
  "id": 71927,
  "loadedTime": 10000,
  "name": "Sparse Stars",
  "position": Array [
    PositionData {
      "depth": 1,
      "height": null,
      "scale": 1,
      "width": null,
      "x": -365.5,
      "y": -487,
      "z": 13750,
    },
    PositionData {
      "depth": 4,
      "height": null,
      "scale": 1,
      "width": null,
      "x": -672.5,
      "y": -357,
      "z": 840,
    },
  ],
  "subType": 8,
}
`;

exports[`ItemData Successfully deserializes ItemData: simple hat 1`] = `
ItemData {
  "amputationData": null,
  "depthType": 19,
  "depths": Object {
    "1": 36000,
    "2": 3000,
    "5": 3650,
    "6": 35150,
    "7": 890,
    "8": 37300,
  },
  "description": "Every cowboy in the Apple Federal has a cap like this.",
  "id": 80078,
  "loadedTime": 10000,
  "name": "Denim Cap·Rare",
  "position": Array [
    PositionData {
      "depth": 1,
      "height": null,
      "scale": null,
      "width": null,
      "x": -17.5,
      "y": 426,
      "z": 36000,
    },
    PositionData {
      "depth": 2,
      "height": null,
      "scale": null,
      "width": null,
      "x": -96.5,
      "y": 447,
      "z": 3000,
    },
  ],
  "subType": 10,
}
`;

exports[`ItemData Successfully deserializes ItemData: simpleHair 1`] = `
ItemData {
  "amputationData": null,
  "depthType": 1,
  "depths": Object {
    "1": 33000,
    "2": 3500,
    "7": 38000,
    "8": 37200,
    "9": 3510,
  },
  "description": "A gentle, thoughtful nobleman is not supposed to be the silent background forever.",
  "id": 10007,
  "loadedTime": 10000,
  "name": "Elegant Nobleman",
  "position": Array [
    PositionData {
      "depth": 1,
      "height": null,
      "scale": null,
      "width": null,
      "x": -21.5,
      "y": 426,
      "z": 33000,
    },
  ],
  "subType": 1,
}
`;

exports[`ItemData Successfully deserializes for the null cases 1`] = `
ItemData {
  "amputationData": null,
  "depthType": null,
  "depths": null,
  "description": "",
  "id": null,
  "loadedTime": 10000,
  "name": "",
  "position": null,
  "subType": null,
}
`;

exports[`ItemData Successfully deserializes for the null cases 2`] = `
PositionData {
  "depth": 10,
  "height": null,
  "scale": null,
  "width": null,
  "x": undefined,
  "y": undefined,
  "z": null,
}
`;
